# FinanceAgents

./: .env  .env.example  .gitignore  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
agents/analysts/: __init__.py  market_analyst.py  news_analyst.py  risk_analyst.py
agents/managers/: __init__.py  coordinator.py  response_generator.py  validator.py
agents/utils/: __init__.py  agent_states.py  agent_utils.py
docs/: architecture.md
graph/: __init__.py  trading_graph.py
llm/: __init__.py  doubao_client.py
memory/: __init__.py  memory_system.py
memory/chromadb/: chroma.sqlite3
templates/: __init__.py  prompts.py
tradingagents/agents/utils/: agent_utils.py
ui/: __init__.py  app.py
